deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-management
spec:
  selector:
    run: order-management
  ports:
  - protocol: TCP
    port: 80
    targetPort: 40000
  type: LoadBalancer
